--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "events": "^3.3.0",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "pdfkit": "^0.16.0"
   }
 }
