--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 PORT=3000
 MONGO_URI=mongodb://localhost:27017/node20
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=jaffro.arthur@gmail.com
+SMTP_PASSWORD=Ar41Ja31&*190623Arth1234
+SMTP_FROM=jaffro.arthur@gmail.com
+ADMIN_EMAIL=jaffro.arthur@gmail.com
