--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "compression": "^1.7.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "events": "^3.3.0",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "helmet": "^8.0.0",
     "mongoose": "^8.9.5",
-    "pdfkit": "^0.16.0"
+    "nodemailer": "^6.9.0",
+    "pdfkit": "^0.16.0",
+    "redis": "^4.7.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
